hphp/test/slow/enum-invalid-base/this.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/this.php on line 3
